# three-beat-investor

./: .env.example  .gitignore  GEMINI.md  main.py  pyproject.toml
docs/: [국내주식] 시세분석.xlsx  구현_계획서.md  작업_계획서.md
src/: kis_client.py  main.py
tests/: conditional_search_test.py  real_test.py  test_kis_client.py  token_test.py
